--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -92,12 +92,12 @@
         width: 500px;
         padding-right: 0px;
         margin: 70px;
-        margin-left:500px ;
+        margin-left:400px ;
     }
     #spacer img{
         width: 650px;
         display: block;
-        margin-left: 350px;
+        margin-left: 250px;
 
     } 
    
